[FIX] setup CSS for desktop specific values to support reviews on Mobile, Tablet & Desktop. Part one

--- a/javascript/css/style-desktop.css
+++ b/javascript/css/style-desktop.css
@@ -176,6 +176,14 @@
 			font-size: 1.25em;
 		}
 		
+		#content h4  /* IO HAVOC */
+		{
+			/* color: #474f51; */
+			line-height: 1.05em;
+			font-size: 1.75em;
+		}
+		
+		
 		#content a
 		{
 			color: #ED391B;
